Use PDI SNAPSHOT version for now. Also add ReviewNinja to README

--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
   </developers>
 
   <properties>
-    <dependency.pentaho-kettle.kettle-core.version>6.0.0.0-316</dependency.pentaho-kettle.kettle-core.version>
+    <dependency.pentaho-kettle.kettle-core.version>6.0-SNAPSHOT</dependency.pentaho-kettle.kettle-core.version>
     <!-- Plugin dependencies -->
     <target.jdk.version>1.7</target.jdk.version>
     <plugin.org.apache.felix.maven-bundle-plugin.version>2.3.7</plugin.org.apache.felix.maven-bundle-plugin.version>
