--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
     <target.jdk.version>1.7</target.jdk.version>
     <plugin.maven-bundle-plugin.version>2.3.7</plugin.maven-bundle-plugin.version>
     <plugin.maven-compiler-plugin.version>3.1</plugin.maven-compiler-plugin.version>
+    <dependency.com.tinkerpop.blueprints.version>2.6.0</dependency.com.tinkerpop.blueprints.version>
   </properties>
 
   <dependencies>
@@ -77,13 +78,11 @@
       <artifactId>kettle-core</artifactId>
       <version>${dependency.pentaho-kettle.kettle-core.version}</version>
     </dependency>
-
     <dependency>
       <groupId>pentaho-kettle</groupId>
       <artifactId>kettle-engine</artifactId>
       <version>${dependency.pentaho-kettle.kettle-core.version}</version>
     </dependency>
-
     <dependency>
       <groupId>org.osgi</groupId>
       <artifactId>org.osgi.core</artifactId>
@@ -94,6 +93,18 @@
       <groupId>pentaho-kettle</groupId>
       <artifactId>kettle-ui-swt</artifactId>
       <version>${dependency.pentaho-kettle.kettle-core.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.tinkerpop.blueprints</groupId>
+      <artifactId>blueprints-core</artifactId>
+      <version>${dependency.com.tinkerpop.blueprints.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.tinkerpop.gremlin</groupId>
+      <artifactId>gremlin-java</artifactId>
+      <version>${dependency.com.tinkerpop.blueprints.version}</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
@@ -135,7 +146,22 @@
           <target>${target.jdk.version}</target>
         </configuration>
       </plugin>
-
+      <plugin>
+        <groupId>org.apache.karaf.tooling</groupId>
+        <artifactId>features-maven-plugin</artifactId>
+        <version>2.3.7</version>
+        <executions>
+          <execution>
+            <id>create-kar</id>
+            <goals>
+              <goal>create-kar</goal>
+            </goals>
+            <configuration>
+              <featuresFile>src/main/resources/pdi-layout-feature.xml</featuresFile>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 
