--- a/pom.xml
+++ b/pom.xml
@@ -23,11 +23,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.pentaho.community</groupId>
-  <artifactId>pdi-layout</artifactId>
+  <artifactId>pdi-layout-parent</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>bundle</packaging>
+  <packaging>pom</packaging>
 
-  <name>pdi-layout Bundle</name>
+  <name>pdi-layout parent</name>
   <description>pdi-layout OSGi bundle project.</description>
 
   <licenses>
@@ -70,43 +70,14 @@
     <plugin.maven-bundle-plugin.version>2.3.7</plugin.maven-bundle-plugin.version>
     <plugin.maven-compiler-plugin.version>3.1</plugin.maven-compiler-plugin.version>
     <dependency.com.tinkerpop.blueprints.version>2.6.0</dependency.com.tinkerpop.blueprints.version>
+    <mockito.version>1.9.5</mockito.version>
+    <junit.version>4.4</junit.version>
+    <guava.version>17.0</guava.version>
   </properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>pentaho-kettle</groupId>
-      <artifactId>kettle-core</artifactId>
-      <version>${dependency.pentaho-kettle.kettle-core.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>pentaho-kettle</groupId>
-      <artifactId>kettle-engine</artifactId>
-      <version>${dependency.pentaho-kettle.kettle-core.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.osgi</groupId>
-      <artifactId>org.osgi.core</artifactId>
-      <version>4.2.0</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>pentaho-kettle</groupId>
-      <artifactId>kettle-ui-swt</artifactId>
-      <version>${dependency.pentaho-kettle.kettle-core.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.tinkerpop.blueprints</groupId>
-      <artifactId>blueprints-core</artifactId>
-      <version>${dependency.com.tinkerpop.blueprints.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.tinkerpop.gremlin</groupId>
-      <artifactId>gremlin-java</artifactId>
-      <version>${dependency.com.tinkerpop.blueprints.version}</version>
-      <scope>provided</scope>
-    </dependency>
-  </dependencies>
+    <modules>
+        <module>pdi-layout-plugin</module>
+    </modules>
 
   <scm>
     <connection>scm:git:git@github.com:${github.user}/${project.artifactId}.git</connection>
@@ -114,55 +85,4 @@
     <developerConnection>scm:git:git@github.com:${github.user}/${project.artifactId}.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.felix</groupId>
-        <artifactId>maven-bundle-plugin</artifactId>
-        <version>2.3.7</version>
-        <extensions>true</extensions>
-        <configuration>
-          <instructions>
-            <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-            <Bundle-Version>${project.version}</Bundle-Version>
-            <Export-Package>
-              org.pentaho.community.di.*;version=${project.version}
-            </Export-Package>
-            <Import-Package>
-              org.pentaho.di.osgi,
-              *
-            </Import-Package>
-          </instructions>
-        </configuration>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>${plugin.maven-compiler-plugin.version}</version>
-        <configuration>
-          <source>${target.jdk.version}</source>
-          <target>${target.jdk.version}</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.karaf.tooling</groupId>
-        <artifactId>features-maven-plugin</artifactId>
-        <version>2.3.7</version>
-        <executions>
-          <execution>
-            <id>create-kar</id>
-            <goals>
-              <goal>create-kar</goal>
-            </goals>
-            <configuration>
-              <featuresFile>src/main/resources/pdi-layout-feature.xml</featuresFile>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
-
 </project>
