--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
 
     <modules>
         <module>pdi-layout-plugin</module>
+        <module>layouts/snake-layout-plugin</module>
     </modules>
 
   <scm>
